force-app/main/default/objects/sugati__Trip_Leader__c/sugati__Trip_Leader__c.object-meta.xml
<CustomObject>
    <label>Trip Leader</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Leaders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>