force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__S_TL_Badges__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TL_Badges__c</fullName>
    <description>Semi-colon separated list of badges to appear on the tour booking page.</description>
    <inlineHelpText>Semi-colon separated list of badges to appear on the tour booking page.</inlineHelpText>
    <label>Badges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>