force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__S_TL_Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TL_Experience_Years__c</fullName>
    <label>Experience Years</label>
    <length>5</length>
    <type>Text</type>
</CustomField>