force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__S_TL_Languages__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TL_Languages__c</fullName>
    <label>Languages</label>
    <type>TextArea</type>
</CustomField>