force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__S_TL_Rating__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TL_Rating__c</fullName>
    <label>Rating</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>