force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__S_TL_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TL_Title__c</fullName>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>