force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__TL_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__TL_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>