force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__TL_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__TL_Contact_Number__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>