force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__TL_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__TL_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>