force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__TL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__TL_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Trip Leaders</relationshipLabel>
    <relationshipName>Trip_Leaders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>