force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__TL_Role__c.field-meta.xml
<CustomField>
    <fullName>sugati__TL_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Group Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>