force-app/main/default/objects/sugati__Trip_Leader__c/fields/sugati__TL_Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__TL_Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>sugati__Supplier_Contact__c</referenceTo>
    <relationshipLabel>Trip Leaders</relationshipLabel>
    <relationshipName>Trip_Leaders</relationshipName>
    <type>Lookup</type>
</CustomField>